# comparison-of-wasm-source-languages-for-running-on-the-server

./: .gitignore  README.md  measurement.sh
evaluation/: Evaluation.ipynb  Readme.md  conda.md
languages/: Readme.md  build.sh
languages/c-ems/: Dockerfile  build.sh
languages/c-wasisdk/: Dockerfile  build.sh
languages/go/: Dockerfile  build.sh
languages/go/fibonacci/: go.mod  (+1 more)
languages/ruby/: Dockerfile  build.sh
languages/rust/: Dockerfile  build.sh
languages/rust/fibonacciiter/: Cargo.toml
languages/rust/fibonacciiter/src/: lib.rs
languages/typescript/: Dockerfile  build.sh
metrics-server/: Cargo.toml  Dockerfile
metrics-server/deployment/: create-table.sql  docker-compose.yml
metrics-server/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
results/: Metrics_Final.sql  Metrics_Zwischenstand.sql
runtime-evaluation/: Cargo.toml  Readme.md
runtime-evaluation/files/input/: numbers_1000.txt  numbers_10000.txt  numbers_100000.txt
runtime-evaluation/src/: config.rs  lib.rs  main.rs  metrics.rs  wasi_log_parser.rs  wasm.rs  workload.rs
runtime-evaluation/src/metrics/: client.rs  models.rs
runtime-evaluation/src/wasi_log_parser/: models.rs  parser.rs
runtime-evaluation/src/wasm/: builder.rs  models.rs  runtime.rs
runtime-evaluation/src/wasm/builder/: fibonacci.rs  fibonacci_iter.rs  file_split.rs
runtime-evaluation/src/workload/: builder.rs  models.rs
runtime-evaluation/src/workload/builder/: fibonacci.rs  fibonacci_iter.rs  file_split.rs
tools/file_split_generator/: Cargo.toml
utils/: copy-logs.sh  copy.sh  write-metric.sh
(+30 files in other folders)
