[package]
name = "runtime_evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.37.0"
wasmtime-wasi = "0.37.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
anyhow = "1.0.19"
rand = "0.8.5"
colored = "2.0.0"
uuid = { version = "1.1.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
pretty_env_logger = "0.4.0"
fancy-regex = "0.10.0"
